# tools

./: .gitignore  Cargo.toml  README.md  chezmoi  hoge.txt  mise.toml  oxlint.json  package.json  pnpm-lock.yaml  scripts.json  tsconfig.json
.omo/run-continuation/: ses_14077e0a8ffeQm3egvkam0LNoo.json
agent-configs/: AGENTS.md
agent-configs/agents/: mt-cursor-config-creator.md  mt-deep-research-planner.md  mt-deep-research-researcher.md  mt-deep-research-reviewer.md  mt-deep-research-writer.md  mt-sdd-code-reviewer.md  mt-sdd-completeness-reviewer.md  mt-sdd-implementation-planner.md  mt-sdd-process-auditor.md  mt-sdd-risk-impact-reviewer.md  mt-sdd-risk-reviewer.md  mt-sdd-task-structure-reviewer.md
agent-configs/opencode/: README.md
chezmoi/: .chezmoiignore  README.md  dot_Raycast.rayconfig  dot_gitconfig  dot_raycast_passphrase.age  dot_zprofile  dot_zsh_secrets.age  dot_zshrc.tmpl
chezmoi/dot_claude/: CLAUDE.md  settings.json
chezmoi/dot_cursor/: hooks.json
chezmoi/dot_takt/: README.md  config.yaml
docker/: README.md  docker-compose.yml
docker/qdrant/: docker-compose.yml
docker/searxng/: docker-compose.yml  settings.yml
docs/adr/: 0001-adopt-mattpocock-skills-assessment.md  (+3 more)
manifests/: Brewfile  README.md  bun-global.yml  mise.toml  npm-global.txt
scripts/: docker.sh
src/: README.md  agent.rs  agent_config.rs  chezmoi.rs  cli.rs  config.rs  doctor.rs  git.rs  main.rs  opencode.rs  plan.rs  raycast.rs  tool.rs  vector.rs
src/agent/: sync.rs  (+3 more)
tests/: chezmoi_cli.rs  cli.rs  docker_script.rs  git_begin_ship.rs  git_sync_ship.rs  vector_cli.rs
(+497 files in other folders)
