[package]
name = "mt"
version = "0.1.0"
edition = "2024"
description = "Personal CLI tools"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
duct = "0.13"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
nix = { version = "0.29", features = ["signal", "process"] }
indicatif = "0.17"
console = "0.15"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
